# reedsolomon

./: .gitignore  .travis-ci.sh  META  Makefile  README.md  _oasis  _tags  galois.ml  galois.mli  makefile  matrix.ml  myocamlbuild.ml  opam  ops.ml  ops.mli  poly.ml  reedsolomon.mllib  reedsolomon.opam  rs.ml  rs.mli  rsi.mli  setup.ml
notebooks/: rs-library-tutorial.ipynb
src/: META  Reedsolomon.mllib  Reedsolomon.mlpack  codec.ml  codec.mli  dune  galois.ml  galois.mli  iter.ml  iter.mli  jbuild  matrix.ml  matrix.mli  ops.ml  ops.mli  poly.ml  poly.mli  rsi.ml  rsi.mli
test/: dune  jbuild  test_iter.ml
webdemo/: dune  jbuild  rswebdemo.ml
