opam-version: "1.2"
maintainer: "andy.ray@ujamjar.com"
homepage: "https://github.com/ujamjar/reedsolomon"
authors: "andy.ray@ujamjar.com"
dev-repo: "https://github.com/ujamjar/reedsolomon"
bug-reports: "https://github.com/ujamjar/reedsolomon/issues"
build: [
  [make "all"]
]
install: [
  [make "install"]
]
remove: [
  [make "uninstall"]
]
depends: [
  "ocamlfind"
]
available: [ ocaml-version >= "4.02.0" ]
